# secure-log2test

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  RELEASING.md  SECURITY.md  SKILL.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  scorecard.yml
core/: generator.py  parser.py
data/: sample_kibana_export.json
scripts/: check_anti_ai_markers.py  check_commit_message.py  check_commit_msg.py  check_text_style.py
secure_log2test/: __init__.py  __main__.py  cli.py
secure_log2test/core/: generator.py  parser.py
secure_log2test/templates/: test_module.py.j2
templates/: test_api.jinja2  test_module.py.j2
tests/: test_cli_guards.py  test_coverage_gaps.py  test_edge_cases.py  test_formats.py  test_generator.py  test_generator_safety.py  test_input_validation.py  test_main.py  test_parser.py  test_redact_marker.py  test_redact_url.py  test_stdout_encoding.py
